# cs300-s21-projects

./: .gitignore  README.md
distributed-store/: .gitignore  CMakeLists.txt  README.md  setup.sh
distributed-store/common/: common.cc  common.h
distributed-store/dynamic_shardmaster/: dynamic_shardmaster.cc  dynamic_shardmaster.h  main.cc
distributed-store/protos/: shardkv.proto  shardmaster.proto
distributed-store/shardkv/: main.cc  shardkv.cc  shardkv.h
distributed-store/shardmaster/: main.cc  shardmaster.cc  shardmaster.h
distributed-store/simple_shardkv/: main.cc  simpleshardkv.cc  simpleshardkv.h
distributed-store/test_utils/: test_utils.cc  test_utils.h
distributed-store/tests/integrated_tests/: server_deletes.cc  server_joins.cc  server_moves.cc  server_rejoins.cc
distributed-store/tests/shardmaster_tests/: shardmaster_complex_moves.cc  shardmaster_error_cases.cc  shardmaster_join.cc  shardmaster_leave.cc  shardmaster_rejoin.cc  shardmaster_simple_moves.cc
distributed-store/tests/simple_shardkv_tests/: missing_keys.cc  simple_all_ops.cc  simple_append.cc
dmalloc/: README.md
fileio/: Makefile  README.md
fileio/example/: io_return_example.c
fileio/impl/: naive.c  stdio.c  student.c
fileio/test_programs/: block_cat.c  byte_cat.c  do_nothing.c  random_block_cat.c  reverse_block_cat.c  reverse_byte_cat.c  rot13.c  stride_cat.c
fileio/test_scripts/: correctness_test.py  performance_test.py
strvec/: README.md
strvec/extra-credit/: Makefile  file.c  file.h  run_extra_tests
strvec/strings/: .gitignore  Makefile  builtin_helper.c  mbstrings.c  mbstrings.h  strings.c  strings.h  strings_tests.c  strings_tests.h  test_runner.c  test_runner.h
strvec/vectors/: Makefile  tests.cc  vector300.c  vector300.h
vunmo/: .gitignore  Makefile  README.md  client.cc  common.hh  network_helpers.cc  network_helpers.hh  queue_tests.hh  run_tests  sanitizers.mk  server.cc  server_test.hh  synchronized_queue.cc  test.sh  tests.hh  vunmo-client.cc  vunmo-client.hh  vunmo-server.cc  vunmo-server.hh
vunmo/demo/: client  server
vunmo/tests/queue/: serial_push_all_flush.cc  serial_push_all_pop_all.cc  serial_push_pop.cc  threads_push_all_pop_all.cc  threads_push_pop.cc
vunmo/tests/server_part1/: test1_start_stop.cc  test2_accept_clients.cc  test3_process_requests.cc
vunmo/tests/server_part2/: basic-load-test.cc  charge-request-declined.cc  charge-request-insufficient-balance.cc  charge-request-invalid-target.cc  charge-request-success.cc  client-setup.cc  deposit-request.cc  pay-request-insufficient-balance.cc  pay-request-invalid-target.cc  pay-request-success.cc  withdraw-request.cc
weensyos/: GNUmakefile  README.md
